--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
         <servlet-api.version>
             3.1.0
         </servlet-api.version>
+        <jstl.version>
+            1.2
+        </jstl.version>
     </properties>
 
         <dependencies>
@@ -65,6 +68,14 @@
                 <version>${servlet-api.version}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl -->
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jstl</artifactId>
+                <version>${jstl.version}</version>
+            </dependency>
+
         </dependencies>
 
     <build>
